<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="bigger">Build It Bigger</string>
    <string name="xyz">XYZ Reader</string>
    <string name="capstone">Capstone App</string>

</resources>
