<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="14dp"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify"
        android:id="@+id/spotifyButton"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/white"
        android:background="@color/blue_500"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:id="@+id/scoresButton"
        android:layout_below="@+id/spotifyButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@color/blue_500"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:id="@+id/libraryButton"
        android:layout_below="@+id/scoresButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@color/blue_500"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/bigger"
        android:id="@+id/buildButton"
        android:layout_below="@+id/libraryButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@color/blue_500"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz"
        android:id="@+id/xyzButton"
        android:layout_below="@+id/buildButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@color/blue_500"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstoneButton"
        android:layout_below="@+id/xyzButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@color/pink_a400"/>




</RelativeLayout>
